Changelog
=========

v0.0.15.9
=========

Released on September 18, 2018.

- Switch to NetStandard 1.3.
- Add EmailAddressAttribute to MailTemplate.FromAddressa.
- Add EmailAddressAttribute to AddressEx.Mail and AddessEx.PecMail.
- Fix MailSettings.SmtpAddress Display Name attribute.

v0.0.15.8
=========

Released on September 17, 2018.

- Rename MailSettings.SmtpServer property.

v0.0.15.7
=========

Released on September 12, 2018.

- Add MailSettings.Id property.

v0.0.15.6
=========

Released on September 11, 2018.

- Fix: MailSettings inherits from BaseModelWithCompanyId.
- Remove Preferences.MailSettings property.

v0.0.15.5
=========

Released on July 30, 2018.

- Fix: Contact.Currency defaults to a CurrencyHelpers.Currencies reference.
- Contact.Relationship.IsClient is true by default.

v0.0.15.4
=========

Released on July 30, 2018

- Add static CurrencyHelpers.Currencies as a Dictionary<string, Currency>.
- Contact.Currency default value is now set to CurrencyHelpers.Currencies["EUR"]
- TODO: add missing currencies other than EUR and USD.

v0.0.15.3
=========

Released on July 30, 2018

- Rename Contact.PublicAdministrationIndex to PublicAdministrationCode.
- DisplayAttributes for Contact, Currency, and Relationship properties.

v0.0.15.2
=========

Released on July 20, 2018

- Contact.Bank refactored in to Bank.Id. Closes adam/#7.

v0.0.15.1
=========

Released on July 12, 2018

- Vat.Name and Vat.Code now carry the Required attribute.

v0.0.15
=======

Released on May 30th, 2018.

- Remove Company.FiscalProfile.Vat property.
- Remove Fee.Vat property.
- Remove Payment.Bank property.
- Remove Payment.Fee property.
- Add Company.FiscalProfile.VatId property.
- Add Fee.VatId property.
- Add Payment.BankId property.
- Add Payment.FeeId property.

v0.0.14
=======

Released on May 25, 2018.

- Add IBank interface from which both the new Bank and the now renamed BankAsProperty classes inherit.